Script to init database and upgrade selectors

--- a/client/src/translations/fr.json
+++ b/client/src/translations/fr.json
@@ -26,6 +26,8 @@
   "addAnItem": "Ajouter un article",
   "itemTitle": "Titre de l'article",
   "itemDescription": "Description de l'article",
-  "itemPrice": "Prix de l'article"
+  "itemPrice": "Prix de l'article",
+  "confirm": "Confirmer",
+  "back": "Retour"
 
 }
