--- a/client/src/translations/fr.json
+++ b/client/src/translations/fr.json
@@ -2,6 +2,9 @@
   "home": "Accueil",
   "profile": "Profil",
   "settings": "Paramètres",
+  "dropPhotosHere": "Déposez vos photos ici",
+  "importPhotos": "Importer des photos",
+  "photos": "Photos",
   "connection": "Connexion",
   "login": "Se connecter",
   "logout": "Se déconnecter",
