Edit an article

--- a/client/src/translations/fr.json
+++ b/client/src/translations/fr.json
@@ -16,6 +16,7 @@
   "name": "Nom",
   "firstName": "Prénom",
   "email": "Email",
+  "edit": "Modifier",
   "password": "Mot de passe",
   "iAcceptConditions": "J'accepte les conditions d'utilisation",
   "alreadyHaveAccount": "Vous avez déjà un compte ?",
@@ -29,7 +30,11 @@
   "floorPrice": "Prix plancher",
   "add": "Ajouter",
   "addItem": "Ajouter l'article",
+  "editItem": "Modifier l'article",
   "addAnItem": "Ajouter un article",
+  "itemUpdated": "Article mis à jour",
+  "itemCreated": "Article ajouté",
+  "noItems": "Aucun article",
   "itemTitle": "Titre de l'article",
   "itemDescription": "Description de l'article",
   "itemPrice": "Prix de l'article",
